--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "json.schemas": [
     { "fileMatch": ["*.es.json"], "url": "./mappings/schema.json" }
-  ]
+  ],
+  "yaml.schemas": { "./mappings/schema.json": ["*.es.yaml"] }
 }
