--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "json.schemas": [
     { "fileMatch": ["*.es.json"], "url": "./mappings/schema.json" },
-    { "fileMatch": ["*.esa.json"], "url": "./analyzers/schema.json" }
+    { "fileMatch": ["*.esa.json"], "url": "./analyzers/schema.json" },
+    { "fileMatch": ["*.esi.json"], "url": "./index/schema.json" }
   ],
   "yaml.schemas": { "./mappings/schema.json": ["*.es.yaml"] }
 }
