--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
     { "fileMatch": ["*.esm.json"], "url": "./mappings/schema.json" },
     { "fileMatch": ["*.esa.json"], "url": "./analyzers/schema.json" },
     { "fileMatch": ["*.esi.json"], "url": "./index/schema.json" },
-		{ "fileMatch": ["*.esq.json"], "url": "./search/schema.json" }
+		{ "fileMatch": ["*.esq.json"], "url": "./search/schema.json" },
+
+		{ "fileMatch": ["*.esqscr.json"], "url": "./search/scroll.schema.json" }
   ],
   "yaml.schemas": { "./mappings/schema.json": ["*.esm.yaml"] }
 }
